--- a/.docker/Dockerfile.cli
+++ b/.docker/Dockerfile.cli
@@ -1,5 +1,7 @@
+ARG BAY_IMAGE_VERSION=latest
+
 # @see https://github.com/dpc-sdp/bay/blob/master/bay/images/Dockerfile.php
-FROM singledigital/bay-cli:latest
+FROM singledigital/bay-cli:${BAY_IMAGE_VERSION}
 ARG COMPOSER
 
 ENV MYSQL_HOST=mariadb \
@@ -23,3 +25,6 @@ RUN echo "memory_limit=-1" >> /usr/local/etc/php/conf.d/memory.ini \
     && rm -rf /usr/local/etc/php/conf.d/memory.ini
 
 COPY . /app
+
+RUN chgrp -R 0 /app/.keys && \
+    chmod -R 660 /app/.keys/*
