Removed the exclusion of docroot from phpcs.
On-behalf-of: @salsadigitalauorg <sonny@salsadigital.com.au>

--- a/.env
+++ b/.env
@@ -56,7 +56,7 @@ INSTALL_NEW_SITE=1
 # DRUPAL_REFRESH_SEARCHAPI=1
 
 # Uncomment and add comma-separated list of targets (no spaces).
-# PHPCS_TARGETS="src,tests"
+# PHPCS_TARGETS="docroot/modules/custom,docroot/themes/custom,docroot/sites/default/settings.php,docroot/sites/default/envs"
 
 # Uncomment below if Bay integration is enabled.
 # BAY_INTEGRATION_ENABLED=1
