Updated Tide Media version constraint.

--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
         "dpc-sdp/tide_core": "^1.2.5"
     },
     "suggest": {
-        "dpc-sdp/tide_media:1.2.5": "Media and related configuration for Tide Drupal 8 distribution"
+        "dpc-sdp/tide_media:^1.2.5": "Media and related configuration for Tide Drupal 8 distribution"
     }
 }
