--- a/.env
+++ b/.env
@@ -35,6 +35,7 @@
 # LOCALDEV_URL=http://mysite.docker.amazee.io
 
 # Database connection details.
+# MYSQL_IMAGE=docker.pkg.github.com/dpc-sdp/<CURRENTDIR>/db:production-latest
 # MYSQL_HOST=mariadb
 # MYSQL_PORT=3306
 
