--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "GPL-2.0-or-later",
     "type": "drupal-module",
     "require": {
-        "dpc-sdp/tide_core": "dev-feature/SDPA-4790-drupalcore-8.9.x as 1.6.14"
+        "dpc-sdp/tide_core": "^1.6.0"
     },
     "suggest": {
         "dpc-sdp/tide_media:^1.7.0": "Media and related configuration for Tide Drupal 8 distribution"
