--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "GPL-2.0-or-later",
     "type": "drupal-module",
     "require": {
-        "dpc-sdp/tide_core": "^2.0.0"
+        "dpc-sdp/tide_core": "dev-feature/SDPA-3326-Remove-CMS-module-management-in-adminUI as 2.0.2"
     },
     "suggest": {
         "dpc-sdp/tide_media:^1.7.0": "Media and related configuration for Tide Drupal 8 distribution"
