--- a/behat.yml
+++ b/behat.yml
@@ -18,15 +18,16 @@ default:
       - Ubirak\RestApiBehatExtension\Json\JsonContext
 
   extensions:
-    Behat\MinkExtension:
-      goutte: ~
-      base_url: http://nginx:8080
+    Drupal\MinkExtension:
       files_path: '%paths.base%/tests/behat/fixtures'
-      browser_name: chrome
       selenium2:
         wd_host: "http://chrome:4444/wd/hub"
         capabilities: { "browser": "chrome", "version": "*", "marionette": true }
+      goutte: ~
+      ajax_timeout: 5
+      browser_name: chrome
       javascript_session: selenium2
+      base_url: http://nginx:8080
     # Provides integration with Drupal APIs.
     Drupal\DrupalExtension:
       blackbox: ~
