Upgrades dev-tools to use Drupal 9 (#58)
* Updates drupalcore to 9, other dependencies and settings.

--- a/behat.yml
+++ b/behat.yml
@@ -13,21 +13,21 @@ default:
       - Drupal\DrupalExtension\Context\MinkContext
       - Drupal\DrupalExtension\Context\MarkupContext
       - Drupal\DrupalExtension\Context\MessageContext
-      - IntegratedExperts\BehatScreenshotExtension\Context\ScreenshotContext
-      - IntegratedExperts\BehatRelativityExtension\Context\RelativityContext
+      - DrevOps\BehatScreenshotExtension\Context\ScreenshotContext
       - Ubirak\RestApiBehatExtension\RestApiContext
       - Ubirak\RestApiBehatExtension\Json\JsonContext
 
   extensions:
-    Behat\MinkExtension:
-      goutte: ~
-      base_url: http://nginx:8080
+    Drupal\MinkExtension:
       files_path: '%paths.base%/tests/behat/fixtures'
-      browser_name: chrome
       selenium2:
         wd_host: "http://chrome:4444/wd/hub"
         capabilities: { "browser": "chrome", "version": "*", "marionette": true }
+      goutte: ~
+      ajax_timeout: 5
+      browser_name: chrome
       javascript_session: selenium2
+      base_url: http://nginx:8080
     # Provides integration with Drupal APIs.
     Drupal\DrupalExtension:
       blackbox: ~
@@ -62,32 +62,10 @@ default:
         splash: '.region-splash'
 
     # Allows to capture HTML and JPG screenshots (based on the driver used).
-    IntegratedExperts\BehatScreenshotExtension:
+    DrevOps\BehatScreenshotExtension:
       dir: '%paths.base%/screenshots'
       fail: true
       purge: false
-    IntegratedExperts\BehatRelativityExtension:
-      breakpoints:
-        mobile:
-          width: 320
-          height: 480
-        tablet:
-          width: 768
-          height: 1024
-        desktop:
-          width: 1024
-          height: 1024
-          default: true
-      # Vertical offset - document will be scrolled to the element with this offset.
-      # Useful when fixed elements may cover part of pages making it impossible to click on components.
-      offset: 60
-      # List of site-wide components.
-      components:
-        'header-container': ".header-container"
-        'page': ".layout-container"
-        'header': "header"
-        'main': "main"
-        'footer': "footer"
     Ubirak\RestApiBehatExtension\Extension:
       rest:
         base_url: http://nginx:8080
