--- a/composer.json
+++ b/composer.json
@@ -4,9 +4,9 @@
     "license": "GPL-2.0-or-later",
     "type": "drupal-module",
     "require": {
-        "dpc-sdp/tide_core": "^2.0.0"
+        "dpc-sdp/tide_core": "dev-feature/SDPA-5396-drupalcore-9 as 2.0.14"
     },
     "suggest": {
-        "dpc-sdp/tide_media:^1.7.0": "Media and related configuration for Tide Drupal 8 distribution"
+        "dpc-sdp/tide_media:dev-compatible-with-drupal-9": "Media and related configuration for Tide Drupal 8 distribution"
     }
 }
