--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,6 @@
         "dpc-sdp/tide_core": "3.0.0"
     },
     "suggest": {
-        "dpc-sdp/tide_media:dev-compatible-with-drupal-9": "Media and related configuration for Tide Drupal 8 distribution"
+        "dpc-sdp/tide_media:^3.0.0": "Media and related configuration for Tide Drupal 8 distribution"
     }
 }
