--- a/.docker/Dockerfile.cli
+++ b/.docker/Dockerfile.cli
@@ -1,7 +1,7 @@
 ARG BAY_IMAGE_VERSION=5.x
 
 # @see https://github.com/dpc-sdp/bay/blob/master/bay/images/Dockerfile.php
-FROM singledigital/bay-cli:${BAY_IMAGE_VERSION}
+FROM "ghcr.io/dpc-sdp/bay/php-cli:${BAY_IMAGE_VERSION}"
 ARG COMPOSER
 
 ENV MYSQL_HOST=mariadb \
