--- a/.docker/Dockerfile.elasticsearch
+++ b/.docker/Dockerfile.elasticsearch
@@ -1,10 +1,9 @@
-FROM amazeeio/elasticsearch:latest
+ARG BAY_IMAGE_VERSION
 ARG ES_TPL
 
-ENV ES_TPL=${ES_TPL:-elasticsearch.yml}
+FROM "ghcr.io/dpc-sdp/bay/elasticsearch:${BAY_IMAGE_VERSION}"
 
-RUN bin/elasticsearch-plugin install analysis-kuromoji \
-    && bin/elasticsearch-plugin install analysis-icu
+ENV ES_TPL=${ES_TPL:-elasticsearch.yml}
 
 COPY .docker/elasticsearch.yml .docker/elasticsearch.* /tmp/elasticsearch/
 
