Update dev stack for all tide libraries that still use dev tools (#87)
* Update dev stack for all tide libraries that still use dev tools

* Add updates to get behat testing over the line with psr changes

* Migrate builder to the github hosted version

* Add missing quotes? I think this is the problem?

* Remove pull command, it's just not needed

* [SRM-829] Unset quotes for debugging.

* [SRM-829] Removed superfluous value

* Remove reference to copying redirects used for full projects not modules

---------

Co-authored-by: Guy Owen <guy.owen@dpc.vic.gov.au>

--- a/.docker/Dockerfile.cli
+++ b/.docker/Dockerfile.cli
@@ -1,7 +1,7 @@
-ARG BAY_IMAGE_VERSION=5.x
+ARG BAY_IMAGE_VERSION
 
 # @see https://github.com/dpc-sdp/bay/blob/master/bay/images/Dockerfile.php
-FROM singledigital/bay-cli:${BAY_IMAGE_VERSION}
+FROM ghcr.io/dpc-sdp/bay/php-cli:${BAY_IMAGE_VERSION}
 ARG COMPOSER
 
 ENV MYSQL_HOST=mariadb \
@@ -21,7 +21,7 @@ ADD dpc-sdp /app/dpc-sdp
 COPY composer.json .env composer.* /app/
 
 RUN echo "memory_limit=-1" >> /usr/local/etc/php/conf.d/memory.ini \
-    && composer install -n --no-dev --ansi --prefer-dist --no-suggest --optimize-autoloader \
+    && COMPOSER=$COMPOSER composer install -n --no-dev --ansi --prefer-dist --no-suggest --optimize-autoloader \
     && rm -rf /usr/local/etc/php/conf.d/memory.ini
 
 COPY . /app
