--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "GPL-2.0-or-later",
     "type": "drupal-module",
     "require": {
-        "dpc-sdp/tide_core": "^4.0.0"
+        "dpc-sdp/tide_core": "dev-feature/SDPAP-8421-adds-Content-Category-to-tide_core as 4.0.1"
     },
     "suggest": {
         "dpc-sdp/tide_media:^4.0.0": "Media and related configuration for Tide Drupal 10 distribution"
